--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ html {
 }
 
 body, p {
-	color: #6f738b; 
+	color: #6f738b;
 	font: 400 1rem/1.75rem "Open Sans", sans-serif;
 }
 
@@ -275,7 +275,7 @@ a:hover {
 }
 
 /* IE10+ hack to solve lower label text position compared to the rest of the browsers */
-@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
 	.label-control {
 		top: 0.9375rem;
 	}
@@ -363,7 +363,7 @@ input[type='checkbox'] {
 }
 
 /* IE10+ hack to raise checkbox field position compared to the rest of the browsers */
-@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
 	input[type='checkbox'] {
 		vertical-align: -9%;
 	}
@@ -497,17 +497,17 @@ input[type='checkbox'] {
 /* animate in */
 .my-mfp-slide-bottom.mfp-ready .zoom-anim-dialog {
 	opacity: 1;
-	-webkit-transform: translateY(0) perspective(37.5rem) rotateX(0); 
-	-ms-transform: translateY(0) perspective(37.5rem) rotateX(0); 
-	transform: translateY(0) perspective(37.5rem) rotateX(0); 
+	-webkit-transform: translateY(0) perspective(37.5rem) rotateX(0);
+	-ms-transform: translateY(0) perspective(37.5rem) rotateX(0);
+	transform: translateY(0) perspective(37.5rem) rotateX(0);
 }
 
 /* animate out */
 .my-mfp-slide-bottom.mfp-removing .zoom-anim-dialog {
 	opacity: 0;
-	-webkit-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg); 
-	-ms-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg); 
-	transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg); 
+	-webkit-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg);
+	-ms-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg);
+	transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg);
 }
 
 /* dark overlay, start state */
@@ -747,7 +747,7 @@ input[type='checkbox'] {
 	-ms-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 }
-  
+
 .header .video-play-button:before {
 	content: "";
 	position: absolute;
@@ -764,7 +764,7 @@ input[type='checkbox'] {
 	-ms-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 }
-  
+
 .header .video-play-button:after {
 	content: "";
 	position: absolute;
@@ -781,7 +781,7 @@ input[type='checkbox'] {
 	-ms-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 }
-  
+
 .header .video-play-button span {
 	position: relative;
 	display: block;
@@ -794,7 +794,7 @@ input[type='checkbox'] {
 	border-top: 1rem solid transparent;
 	border-bottom: 1rem solid transparent;
 }
-  
+
 @keyframes pulse-border {
 	0% {
 		transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
@@ -860,7 +860,7 @@ input[type='checkbox'] {
 	-moz-transform: scale(1.15);
 	-webkit-transform: scale(1.15);
 	transform: scale(1.15);
-} 
+}
 /* end of hover animation */
 
 .cards-1 .card-body {
@@ -1048,7 +1048,8 @@ input[type='checkbox'] {
 /********************/
 .split .area-1 {
 	height: 27rem;
-	background: url('../images/audience.jpg') center left no-repeat;
+	/*background: url('../images/audience.jpg') center left no-repeat;*/
+  background: url('../images/pintora1.bridget.jpg') center left no-repeat;
 	background-size: cover;
 }
 
@@ -1106,7 +1107,7 @@ input[type='checkbox'] {
 }
 
 .basic-2 .takeaway-container {
-	margin-bottom: 3.25rem;	
+	margin-bottom: 3.25rem;
 	padding: 1.5rem 1.5rem 0.5rem 1.5rem;
 	border-radius: 0.25rem;
 	box-shadow: 0 0.375rem 1rem 0 rgba(0, 0, 0, 0.1);
@@ -1455,7 +1456,7 @@ a.back-to-top {
 }
 
 a:hover.back-to-top {
-	background-color: #3d4550; 
+	background-color: #3d4550;
 }
 
 
@@ -1502,7 +1503,7 @@ a:hover.back-to-top {
 	height: 100%;
 	width: 100%;
 	position: absolute;
-	border: none; 
+	border: none;
 }
 
 .ex-cards-1 .card {
@@ -1573,7 +1574,7 @@ a:hover.back-to-top {
 
 /*************************/
 /*     Media Queries     */
-/*************************/	
+/*************************/
 /* Min-width 768px */
 @media (min-width: 768px) {
 
@@ -1587,8 +1588,8 @@ a:hover.back-to-top {
 		height: 3.25rem;
 	}
 	/* end of header */
-	
-	
+
+
 	/* Description */
 	.cards-1 .card {
 		display: inline-block;
@@ -1621,7 +1622,7 @@ a:hover.back-to-top {
 		margin-bottom: 0;
 		vertical-align: top;
 	}
-	
+
 	.basic-2 .takeaway-text {
 		display: inline-block;
 		width: 35.75rem;
@@ -1635,7 +1636,7 @@ a:hover.back-to-top {
 		width: 1.375rem;
 		background-size: 1.375rem 2.125rem;
 	}
-	
+
 	.slider .swiper-button-next {
 		right: 1rem;
 		width: 1.375rem;
@@ -1666,7 +1667,7 @@ a:hover.back-to-top {
 		display: inline-block;
 		vertical-align: top;
 	}
-	
+
 	.form .form-control-input {
 		width: 20rem;
 		border-top-right-radius: 0;
@@ -1741,7 +1742,7 @@ a:hover.back-to-top {
 
 /* Min-width 992px */
 @media (min-width: 992px) {
-	
+
 	/* General Styles */
 	h1 {
 		font-size: 3rem;
@@ -1763,7 +1764,7 @@ a:hover.back-to-top {
 		background-color: transparent;
 		box-shadow: none;
 	}
-	
+
 	.navbar-custom .navbar-nav {
 		margin-top: 0;
 		margin-bottom: 0;
@@ -1772,7 +1773,7 @@ a:hover.back-to-top {
 	.navbar-custom .nav-item .nav-link {
 		padding: 0.25rem 0.75rem;
 	}
-	
+
 	.navbar-custom .dropdown-menu {
 		padding-top: 1rem;
 		padding-bottom: 1.125rem;
@@ -1798,12 +1799,12 @@ a:hover.back-to-top {
 		margin-left: 0.25rem;
 		font-size: 0.75rem;
 	}
-	
+
 	.navbar-custom .fa-stack-2x {
 		color: #fc5d66;
 		transition: all 0.2s ease;
 	}
-	
+
 	.navbar-custom .fa-stack-1x {
 		color: #ffffff;
 		transition: all 0.2s ease;
@@ -1834,7 +1835,7 @@ a:hover.back-to-top {
 	/* end of header */
 
 
-	/* Description */ 
+	/* Description */
 	.cards-1 .card {
 		width: 26.375rem;
 		margin-right: 1.25rem;
@@ -1846,7 +1847,7 @@ a:hover.back-to-top {
 		margin-right: auto;
 		margin-left: auto;
 	}
-	/* end of description */ 
+	/* end of description */
 
 
 	/* Description Lightboxes */
@@ -1891,13 +1892,13 @@ a:hover.back-to-top {
 	.split {
 		height: 41rem;
 	}
-	
+
 	.split .area-1 {
 		width: 50%;
 		height: 100%;
 		display: inline-block;
 	}
-	
+
 	.split .area-2 {
 		width: 50%;
 		height: 100%;
@@ -2110,12 +2111,12 @@ a:hover.back-to-top {
 		margin-right: 0;
 		margin-left: 0;
 	}
-	
+
 	.basic-2 .takeaway-container:nth-of-type(3n+2) {
 		margin-right: 2.125rem;
 		margin-left: 2.125rem;
 	}
-	
+
 	.basic-2 .takeaway-text {
 		width: 13.5rem;
 	}
@@ -2160,7 +2161,7 @@ a:hover.back-to-top {
 		margin-right: 1.125rem;
 		margin-left: 1.125rem;
 	}
-	
+
 	.counter #counter .cell:first-of-type {
 		margin-left: 0;
 	}
