--- a/css/styles.css
+++ b/css/styles.css
@@ -1203,6 +1203,24 @@ input[type='checkbox'] {
 	margin-bottom: 3rem;
 }
 
+.counter .snap-responsive {
+  position: relative;
+  padding-bottom: 56.25%; /* 16/9 ratio */
+  padding-top: 30px; /* IE6 workaround */
+  height: 0;
+  overflow: hidden;
+}
+
+.snap-responsive iframe,
+.snap-responsive object,
+.snap-responsive embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .counter #counter {
 	margin-bottom: 1rem;
 }
